GNOME Bugzilla – Bug 635341
Shoudn't pager rows and orientation be only visual and not alter the ws layout
Last modified: 2015-04-27 17:53:36 UTC
To me it seems strange the pager rows and orientation also alter the workspace layout of the screen. This way a user can never configure 2 pagers on the panel. Unneeded IMHO and something you wouldn't expect the be handled by the pager.
Well, the workspace layout of the screen is explicitly set by pagers, according to the spec. Where would you want to it, else?
Also, thinking a bit more about it: having two pagers, each one with a different layout, sounds highly confusing to me. I'm not sure we want to support that.
Nick, please elaborate on your idea and reopen the bug report then. Thanks in advance!
This bug is referenced from XFCE4 bugzilla: https://bugzilla.xfce.org/show_bug.cgi?id=6961 and also related is this Fedora Bugzilla entry: https://bugzilla.redhat.com/show_bug.cgi?id=728975 For me (Fedora 18, XFCE 4.10, libwnck-2.30.7) the problem is that I have two pagers on my dual-head desktop (two panels - each on one screen - and each with its own pager). My desktop is set up as 3x3 virtual desktops. When I log in, one of the pager displays 3x3 desktops as expected, and the other one is configured as 1x9 (i.e. one row of 9 desktops). When I right-click on that pager and open Properties, it immediately goes back to the 3x3 layout. I am not sure whether this was what Nick Schermer meant. So I will not reopen the bug myself (yet?). I am just describing the problem I see on my system.
Vincent Untz: Two pagers with a *different* layout, as you say is odd, however, two pagers with the *same* layout is reasonable; e.g. one on each monitor. The problem is that the number of rows shouldn't be a property of the pager, it should be a property of the workspace system itself, that way the pagers are purely views and don't change anything.